api/crates/postgres/tests/integration/replicas/snapshots/integration__replicas__update_by_id____test_context_wrapped_fails.snap
---
source: crates/postgres/tests/integration/replicas/update_by_id.rs
expression: ctx.queries()
---
[[queries]]
sql = '''
SELECT
  "id",
  "medium_id",
  "display_order",
  "original_url",
  "mime_type",
  "width",
  "height",
  "phase",
  "created_at",
  "updated_at"
FROM
  "replicas"
WHERE
  "id" = $1
FOR UPDATE'''
rows_affected = 0
rows_returned = 0
