api/crates/postgres/tests/integration/replicas/snapshots/integration__replicas__update_by_id____test_context_wrapped_succeeds.snap
---
source: crates/postgres/tests/integration/replicas/update_by_id.rs
expression: ctx.queries()
---
[[queries]]
sql = '''
SELECT
  "id",
  "medium_id",
  "display_order",
  "original_url",
  "mime_type",
  "width",
  "height",
  "phase",
  "created_at",
  "updated_at"
FROM
  "replicas"
WHERE
  "id" = $1
FOR UPDATE'''
rows_affected = 1
rows_returned = 1

[[queries]]
sql = '''
UPDATE
  "replicas"
SET
  "updated_at" = CURRENT_TIMESTAMP,
  "original_url" = $1,
  "mime_type" = $2,
  "width" = $3,
  "height" = $4
WHERE
  "id" = $5
RETURNING
  "id",
  "medium_id",
  "display_order",
  "original_url",
  "mime_type",
  "width",
  "height",
  "phase",
  "created_at",
  "updated_at"'''
rows_affected = 1
rows_returned = 1

[[queries]]
sql = '''
INSERT INTO
  "thumbnails" ("replica_id", "data", "width", "height")
VALUES
  ($1, $2, $3, $4)
ON CONFLICT
  ("replica_id")
DO UPDATE SET
  "data" = "excluded"."data",
  "width" = "excluded"."width",
  "height" = "excluded"."height",
  "updated_at" = CURRENT_TIMESTAMP
RETURNING
  "id",
  "width",
  "height",
  "created_at",
  "updated_at"'''
rows_affected = 1
rows_returned = 1

[[queries]]
sql = '''
SELECT
  pg_notify($1, $2)'''
rows_affected = 1
rows_returned = 1

[[queries]]
sql = 'COMMIT'
rows_affected = 0
rows_returned = 0
